--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "\"# MauMain-server\"",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node index.ts",
+    "dev": "nodemon",
     "build": "tsc",
-    "serve": "node dist/index.js"
+    "serve": "node dist/index.js",
+    "start:nodemon": "./node_modules/nodemon/bin/nodemon.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +26,7 @@
     "@types/node": "^20.10.4",
     "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
