--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon",
     "build": "tsc",
     "serve": "node dist/index.js",
-    "start:nodemon": "./node_modules/nodemon/bin/nodemon.js"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "mongodb": "^6.3.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
@@ -29,6 +30,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
