--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "dev": "nodemon",
     "build": "tsc",
     "serve": "node dist/index.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles --runInBand"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jose": "^5.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0"
   },
