--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jose": "^5.1.3",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
